# lumpedParameterSolver

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindSUNDIALS.cmake
include/: component.hpp
include/model/: component.hpp  printer.hpp  public_interface.hpp  solver.hpp
model/: RCR.cpp  RCR.h  RCR.hpp  basicprinter.hpp  heart.cpp  heart.h  heart.hpp  interface.h  interface.hpp  main.cpp  modelBlock.h  myoRC.cpp  myoRC.hpp  myogenic.cpp  myogenic.hpp  sdsolver.cpp  sdsolver.hpp  submodule.cpp  submodule.h  submodule.hpp  wrapper.h  wrapper.hpp
model.xcodeproj/: project.pbxproj
model.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
model.xcodeproj/xcuserdata/timhunter.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  Makefile  RCR.cpp  basicprinter.cpp  basicprinter.hpp  betterprinter.hpp  component.cpp  component.hpp  dialyzer.cpp  heart.cpp  heart.hpp  heldt.cpp  interface.hpp  linker.hpp  main.cpp  myoRC.cpp  myoRC.hpp  myocompartment.cpp  myogenic.cpp  rat.cpp  sdsolver.hpp  vpr_circulation.cpp  vpr_circulation.hpp  wrapper.hpp
src/component/: CMakeLists.txt  RCR.cpp  RCR.hpp  component_model.cpp  component_model.hpp  component_wrapper.cpp  component_wrapper.hpp  dialysis.cpp  dialysis.hpp  heart.cpp  heart.hpp  model.hpp  myoRC.cpp  myoRC.hpp  myogenic.cpp  myogenic.hpp  vpr_circulation.cpp  vpr_circulation.hpp  wrapper.hpp
src/model/: CMakeLists.txt  component.cpp  component.hpp  dialysis.cpp  model.hpp  myoRC.cpp  wrapper.cpp  wrapper.hpp
src/model/zero_rc/: CMakeLists.txt
src/printer/: CMakeLists.txt  Makefile  basicprinter.cpp  basicprinter.hpp  betterprinter.cpp  betterprinter.hpp
src/solver/: CMakeLists.txt  Makefile  sdsolver.cpp  sdsolver.hpp  solver.hpp
temp/: dialysis.cpp  dialysis.hpp
test/: test_main.cpp
test/model/: test_main.cpp
